--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
     "expo": "~53.0.13",
+    "expo-av": "^15.1.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.4"
+    "react-native": "0.79.4",
+    "react-native-confetti-cannon": "^1.5.2",
+    "react-native-progress": "^5.0.1",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
