--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
-    "expo": "~53.0.13",
-    "expo-av": "^15.1.7",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.4",
+    "expo": "^54.0.31",
+    "expo-audio": "^1.1.1",
+    "expo-status-bar": "~3.0.9",
+    "expo-video": "^3.0.15",
+    "react": "^19.1.0",
+    "react-native": "^0.81.5",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.15.0"
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "~19.1.10",
+    "expo-module-scripts": "^5.0.8",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
