--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
     "expo": "^54.0.31",
+    "expo-asset": "~12.0.12",
     "expo-audio": "^1.1.1",
     "expo-font": "~14.0.10",
     "expo-splash-screen": "~31.0.12",
@@ -26,9 +27,11 @@
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "^4.2.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
