Update assets and dependencies for Expo project
- Updated adaptive-icon.png, favicon.png, icon.png, and splash-icon.png assets.
- Bumped Expo version from ^54.0.31 to ~54.0.32 in package.json and package-lock.json.
- Updated expo-font version from ~14.0.10 to ~14.0.11 in package.json and package-lock.json.
- Updated various dependencies in package-lock.json to their latest versions.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "aprende-amy-new",
+    "name": "Aprende con Amy",
     "slug": "aprende-amy-new",
     "version": "1.0.0",
     "orientation": "portrait",
