--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
-    "expo": "^54.0.31",
+    "expo": "~54.0.32",
     "expo-asset": "~12.0.12",
     "expo-audio": "^1.1.1",
-    "expo-font": "~14.0.10",
+    "expo-font": "~14.0.11",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.15",
